--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 	<!-- 异步加载JS -->
 	<script src="js/jquery-3.5.1.min.js" defer></script>
 	<script src="performance-config.js" defer></script>
+	
+	<!-- 深色模式样式 -->
+	<link rel="stylesheet" href="css/dark-mode.css">
 </head>
 
 <body style="overflow-y: hidden">
@@ -176,12 +179,13 @@
 	<div class="z-1">
 		<div class="z-4">
 			<div id="jsi-flying-fish-container" class="w-100"></div>
-			<script src="js/fish.js"></script>
+			<!-- <script src="js/fish.js"></script> -->
 		</div>
 		<canvas class="background"></canvas>
 	</div>
 	<script src="js/particles.min.js"></script>
 	<script src="js/foot.js"></script>
+	<script src="js/dark-mode.js"></script>
     
 
 	<script>
@@ -238,9 +242,14 @@
 
 		//--------------------------------------------------------------
 
-		//加载错误图片替换
-		$('img').on("error", function () {
-			$(this).attr('src', 'img/index.png');  // 替换为默认图片
+		//加载错误图片替换（使用原生JavaScript）
+		document.addEventListener('DOMContentLoaded', function() {
+			const images = document.querySelectorAll('img');
+			images.forEach(img => {
+				img.addEventListener('error', function() {
+					this.src = 'img/index.png';  // 替换为默认图片
+				});
+			});
 		});
 
 		//--------------------------------------------------------------
@@ -284,5 +293,6 @@
 		});
 	</script>
 	<div style="display: none;">111</div>
+
 </body>
 </html>
