--- a/index/Develop.html
+++ b/index/Develop.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/index.css" />
+	<link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body>
@@ -107,6 +108,7 @@
         });
     </script>
     <script src="../js/foot.js"></script>
+    <script src="../js/dark-mode.js"></script>
     
     <script>
         // 加载版本信息
