--- a/index/Download.html
+++ b/index/Download.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
+	<link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body>
@@ -95,9 +96,11 @@
 		$('img').on("error", function () {
 			$(this).attr('src', '../img/index.png');  // 替换为默认图片
 		});
+		
 	</script>
 
 	<script src="../js/foot.js"></script>
+	<script src="../js/dark-mode.js"></script>
 
 	<div style="display: none;">111</div><!-- 去广告 -->
 </body>
