--- a/index/More.html
+++ b/index/More.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
+	<link rel="stylesheet" href="../css/dark-mode.css">
 </head>
 
 <body>
@@ -161,8 +162,10 @@
 		$('img').on("error", function () {
 			$(this).attr('src', '../img/index.png');
 		});
+		
 	</script>
 	<script src="../js/foot.js"></script>
+	<script src="../js/dark-mode.js"></script>
 	<script>
 		//more的头部搜索框调用
 		var oTxt = document.getElementById("txt");
