深色系统修复

--- a/index.html
+++ b/index.html
@@ -292,6 +292,16 @@
 			console.error('获取剪贴板文本失败：', err);
 		});
 	</script>
+	
+	<!-- 深色模式功能 -->
+	<script src="js/dark-mode.js"></script>
+	<script>
+		// 初始化深色模式
+		document.addEventListener('DOMContentLoaded', function() {
+			new DarkMode();
+		});
+	</script>
+	
 	<div style="display: none;">111</div>
 
 </body>
