--- a/index/Develop.html
+++ b/index/Develop.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/index.css" />
 	<link rel="stylesheet" href="../css/dark-mode.css">
+	<script src="../js/dark-mode.js"></script>
 </head>
 
 <body>
@@ -142,5 +143,12 @@
     </script>
     
     <div style="display: none;">111</div>
+    
+    <script>
+        // 初始化深色模式
+        document.addEventListener('DOMContentLoaded', function() {
+            new DarkMode();
+        });
+    </script>
 </body>
 </html>
