--- a/index/MM-secure.html
+++ b/index/MM-secure.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
+	<link rel="stylesheet" type="text/css" href="../css/dark-mode.css" />
 	<style>
 		/* 密码输入区域样式 */
 		.password-container {
@@ -152,7 +153,7 @@
 	</style>
 </head>
 
-<body>
+<body style="overflow-y: hidden">
 	<div class="z-3 d-flex flex-row position-fixed">
 		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
 		<button onclick="window.location.href = 'More.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>More</strong></button>
@@ -196,17 +197,24 @@
 	<div class="z-1">
 		<div class="z-4">
 			<div id="jsi-flying-fish-container" class="w-100"></div>
-			<script src="../js/fish.js"></script>
 		</div>
 		<canvas class="background"></canvas>
 	</div>
 	<script src="../js/particles.min.js"></script>
+	<script src="../js/fish.js"></script>
 	<script>
 		$('img').on("error", function () {
 			$(this).attr('src', '../img/index.png');
 		});
 	</script>
 	<script src="../js/foot.js"></script>
+	<script src="../js/dark-mode.js"></script>
+	<script>
+		// 初始化深色模式
+		document.addEventListener('DOMContentLoaded', function() {
+			new DarkMode();
+		});
+	</script>
 
 	<!-- 加密解密功能 -->
 	<script>
@@ -586,7 +594,9 @@
 		// 加载版本信息
 		function loadVersionInfo(data) {
 			if (data.version) {
-				document.getElementById('uptime1').textContent = data.version;
+				// version是一个对象，包含web_vol和web_data属性
+				const versionText = `${data.version.web_vol}`;
+				document.getElementById('uptime1').textContent = versionText;
 			}
 			document.getElementById('state1').textContent = 'Online';
 		}
