--- a/index/More.html
+++ b/index/More.html
@@ -281,6 +281,13 @@
 		}
 	</script>
 	<script>mots()</script>
+	<script src="../js/dark-mode.js"></script>
+	<script>
+		// 初始化深色模式
+		document.addEventListener('DOMContentLoaded', function() {
+			new DarkMode();
+		});
+	</script>
 	<div style="display: none;">111</div>
 </body>
 
