深色系统统一

--- a/index/manager/explore-manager.html
+++ b/index/manager/explore-manager.html
@@ -16,8 +16,11 @@
     <link href="../../css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../css/all.min.css">
     <link href="../../css/manager-styles.css" rel="stylesheet">
+    <!-- 深色模式样式 -->
+    <link rel="stylesheet" href="../../css/dark-mode.css">
     <!-- 引入通用脚本 -->
     <script src="../../js/manager-common.js"></script>
+    <script src="../../js/dark-mode.js"></script>
     <style>
         /* 页面特定样式 */
         .explore-header {
@@ -187,7 +190,7 @@
 </head>
 <body class="manager-body">
     <!-- 返回首页按钮 -->
-    <a href="../../index.html" class="home-button" title="返回首页">
+    <a href="../../index.html" class="home-button bg-dark text-white" title="返回首页">
         <i class="fas fa-home"></i>
     </a>
     
@@ -1148,5 +1151,8 @@
             // 用户需要点击刷新按钮来加载模拟数据
         });
     </script>
+    
+    <!-- 深色模式功能 -->
+    <script src="../../js/dark-mode.js"></script>
 </body>
 </html>
