--- a/index/manager/nav-manager.html
+++ b/index/manager/nav-manager.html
@@ -2,25 +2,12 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>导航数据管理系统</title>
-    <!-- PWA相关配置 -->
-    <link rel="manifest" href="../../manifest.json">
-    <meta name="theme-color" content="#3e8e41">
-    <meta name="description" content="导航页面数据管理工具">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="导航管理">
-    <link rel="apple-touch-icon" href="../../img/index.png">
+    <!-- 模块化 Header 组件 -->
+    <script src="../../js/components/header-component.js"></script>
     
-    <link href="../../css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../css/all.min.css">
-    <link href="../../css/manager-styles.css" rel="stylesheet">
-    <!-- 深色模式样式 -->
-    <link rel="stylesheet" href="../../css/dark-mode.css">
     <!-- 引入通用脚本 -->
     <script src="../../js/manager-common.js"></script>
-    <script src="../../js/dark-mode.js"></script>
     <style>
         /* 页面特定样式 */
         .site-card {
