--- a/index.html
+++ b/index.html
@@ -3,34 +3,13 @@
 
 <head>
 	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan</title>
-	<link rel="Shortcut icon" href="favicon.ico" loading="lazy">
-	<!-- PWA相关配置 -->
-	<link rel="manifest" href="manifest.json">
-	<meta name="theme-color" content="#3e8e41">
-	<meta name="description" content="高效的导航页面，提供快速搜索和网站访问">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<meta name="apple-mobile-web-app-title" content="导航系统">
-	<link rel="apple-touch-icon" href="img/index.png">
-	
-	<!-- 预加载关键CSS -->
-	<link rel="preload" href="css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="css/bootstrap.min.css"></noscript>
-	<link rel="preload" href="css/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="css/index.css"></noscript>
-	<link rel="preload" href="css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-	<noscript><link rel="stylesheet" href="css/all.min.css"></noscript>
-	<link rel="stylesheet" type="text/css" href="css/search-form.css" media="print" onload="this.media='all'">
+	<!-- 模块化 Header 组件 -->
+	<script src="js/components/header-component.js"></script>
 	
 	<!-- 异步加载JS -->
 	<script src="js/jquery-3.5.1.min.js" defer></script>
 	<script src="performance-config.js" defer></script>
-	
-	<!-- 深色模式样式 -->
-	<link rel="stylesheet" href="css/dark-mode.css">
 </head>
 
 <body style="overflow-y: hidden">
@@ -40,21 +19,9 @@
 			<div class="mx-auto shadow mt-3 rounded-3"><img id="indexing" width="250" src="img/login.png" class="p-1">
 			</div>
 			<div class="mx-auto mt-5 pt-5">
-				<form onsubmit="submitFn(this, event);">
-					<div class="search-wrapper">
-						<div class="input-holder">
-							<input type="text" id="txt" class="search-input" placeholder="Type to search"
-								onkeyup="searchToggle(this, event);" />
-							<button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
-						</div>
-						<span class="close" onclick="searchToggle(this, event);"></span>
-						<div class="result-container"></div>
-					</div>
-					<div id="search_ajx">
-						<ul id="list" style="display:none;"></ul>
-					</div>
-				</form>
-				<script type="text/javascript" src="js/search_ajx.js"></script>
+				<!-- 模块化 SearchEngine 组件 -->
+				<div id="search-engine-container"></div>
+				<script src="js/components/search-component.js"></script>
 			</div>
 		</div>
 		<div class="d-flex flex-column" style="height: 60%;">
@@ -176,18 +143,9 @@
 		document.querySelector(`[data-tab="${tabName}"]`).classList.add('active');
 	}
 </script>
-	<div class="z-1">
-		<div class="z-4">
-			<div id="jsi-flying-fish-container" class="w-100"></div>
-			<!-- <script src="js/fish.js"></script> -->
-		</div>
-		<canvas class="background"></canvas>
-	</div>
-	<script src="js/particles.min.js"></script>
-	<script src="js/foot.js"></script>
-	<script src="js/dark-mode.js"></script>
-    
-
+	<!-- 模块化 Background 组件 -->
+	<script src="js/components/background-component.js"></script>
+	
 	<script>
 		//首页栏目切换算法
 		var aTop = document.getElementsByClassName('nav-top');
