--- a/index/MM-secure.html
+++ b/index/MM-secure.html
@@ -3,14 +3,10 @@
 
 <head>
 	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan - Secure MM</title>
-	<link rel="Shortcut icon" href="../favicon.ico" loading="lazy">
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<!-- 模块化 Header 组件 -->
+	<script src="../js/components/header-component.js"></script>
 	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="../css/index.css" />
-	<link rel="stylesheet" type="text/css" href="../css/dark-mode.css" />
 	<style>
 		/* 密码输入区域样式 */
 		.password-container {
@@ -193,15 +189,8 @@
 		</div>
 	</div>
 
-	<!-- 动态背景 -->
-	<div class="z-1">
-		<div class="z-4">
-			<div id="jsi-flying-fish-container" class="w-100"></div>
-		</div>
-		<canvas class="background"></canvas>
-	</div>
-	<script src="../js/particles.min.js"></script>
-	<script src="../js/fish.js"></script>
+	<!-- 模块化 Background 组件 -->
+	<script src="../js/components/background-component.js"></script>
 	<script>
 		$('img').on("error", function () {
 			$(this).attr('src', '../img/index.png');
