--- a/index/MM-secure.html
+++ b/index/MM-secure.html
@@ -6,163 +6,49 @@
 	<title>Xiaolan - Secure MM</title>
 	<!-- 模块化 Header 组件 -->
 	<script src="../js/components/header-component.js"></script>
+	<link rel="stylesheet" href="../css/manager-styles.css">
 	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
 	<style>
-		/* 密码输入区域样式 */
-		.password-container {
-			max-width: 500px;
-			margin: 0 auto;
-			padding: 20px;
-			background-color: rgba(255, 255, 255, 0.9);
-			border-radius: 10px;
-			box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-		}
-
-		.pattern-container {
-			display: grid;
-			grid-template-columns: repeat(4, 1fr);
-			gap: 15px;
-			margin: 20px 0;
-		}
-
-		.pattern-btn {
-			width: 80px;
-			height: 80px;
-			border-radius: 10px;
-			font-size: 30px;
-			cursor: pointer;
-			border: 2px solid #ddd;
-			background-color: #f8f9fa;
-			transition: all 0.3s ease;
-		}
-
-		.pattern-btn:hover {
-			transform: scale(1.1);
-			border-color: #0d6efd;
-			background-color: #e7f3ff;
-		}
-
-		.pattern-btn.selected {
-			background-color: #0d6efd;
-			color: white;
-			border-color: #0a58ca;
-		}
-
-		/* 密码显示区域样式更新 */
-		.password-display {
-			font-size: 32px;
-			text-align: center;
-			margin: 20px 0;
-			letter-spacing: 15px;
-			font-family: monospace;
-			padding: 15px;
-			border: 2px solid #ced4da;
-			border-radius: 8px;
-			background-color: #f8f9fa;
-			color: #495057;
-			transition: all 0.3s ease;
-			min-height: 60px;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-		}
-
-		/* 错误状态下的密码显示区域 */
-		.password-display.error {
-			border-color: #dc3545;
-			background-color: #fff5f5;
-			color: #dc3545;
-			box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
-		}
-
-		/* 抖动动画 */
+		/* 页面特定样式 - 仅保留未标准化的动画 */
 		@keyframes shake {
 			0%, 100% { transform: translateX(0); }
 			10%, 30%, 50%, 70%, 90% { transform: translateX(-5px); }
 			20%, 40%, 60%, 80% { transform: translateX(5px); }
 		}
 
-		/* 抖动效果类 */
 		.shake {
 			animation: shake 0.5s ease-in-out;
 		}
 
-		.error-message {
-			color: #dc3545;
-			text-align: center;
-			margin: 10px 0;
-			font-weight: 500;
+		/* 图案按钮悬停效果 */
+		.pattern-btn:hover {
+			transform: scale(1.1);
+			border-color: var(--primary-color) !important;
+			background-color: var(--bg-light) !important;
 		}
 
-		.lockout-message {
-			color: #dc3545;
-			text-align: center;
-			margin: 10px 0;
-			font-weight: bold;
-		}
-
-		/* 解密后内容样式 */
-		.content-container {
-			max-width: 800px;
-			margin: 0 auto;
-			padding: 20px;
-		}
-
-		.mm-entry {
-			background-color: rgba(255, 255, 255, 0.9);
-			border-radius: 8px;
-			padding: 15px;
-			margin: 10px 0;
-			box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-		}
-
-		.mm-entry-platform {
-			font-size: 18px;
-			font-weight: bold;
-			color: #0d6efd;
-			margin-bottom: 5px;
-		}
-
-		.mm-entry-account {
-			font-size: 16px;
-			margin-bottom: 5px;
-		}
-
-		.mm-entry-password {
-			font-size: 14px;
-			color: #6c757d;
-			font-style: italic;
-		}
-
-		/* 响应式设计 */
-		@media (max-width: 576px) {
-			.pattern-container {
-				grid-template-columns: repeat(2, 1fr);
-			}
-
-			.pattern-btn {
-				width: 60px;
-				height: 60px;
-				font-size: 20px;
-			}
+		.pattern-btn.selected {
+			background-color: var(--primary-color) !important;
+			color: white !important;
+			border-color: var(--secondary-color) !important;
 		}
 	</style>
 </head>
 
-<body style="overflow-y: hidden">
+<body class="overflow-y-hidden">
 	<div class="z-3 d-flex flex-row position-fixed">
-		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
-		<button onclick="window.location.href = 'More.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>More</strong></button>
+		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3 w-100px"><strong>返回</strong></button>
+		<button onclick="window.location.href = 'More.html'" type="button" class="btn btn-info shadow mt-3 w-100px"><strong>More</strong></button>
 	</div>
 
 	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
 		<!-- 密码输入区域 -->
 		<div id="password-section" class="mt-10">
-			<div class="password-container">
+			<div class="password-container mw-500px mx-auto p-4 bg-white rounded-10 shadow-soft">
 				<h3 class="text-center mb-4">解密 MM 数据</h3>
 				<p class="text-center mb-4">请点击四位数图案密码 (A: □, B: △, C: ◇, D: ★)</p>
-				<div class="password-display" id="password-display">____</div>
-				<div class="pattern-container" id="pattern-container"></div>
+				<div class="password-display mb-4" id="password-display">____</div>
+				<div class="pattern-container grid-4 grid-sm-2 gap-15 my-4" id="pattern-container"></div>
 				<div class="error-message" id="error-message"></div>
 				<div class="lockout-message" id="lockout-message"></div>
 				<button id="clear-btn" class="btn btn-secondary w-100 mt-2">清除</button>
@@ -170,7 +56,7 @@
 		</div>
 
 		<!-- 解密后内容区域 -->
-		<div id="content-section" class="content-container" style="display: none;">
+		<div id="content-section" class="content-container mw-800px mx-auto p-4 d-none">
 			<h3 class="text-center mb-4">MM 数据</h3>
 			<div id="mm-content"></div>
 		</div>
@@ -371,7 +257,7 @@
 
 			patternOrder.forEach(pattern => {
 				const button = document.createElement('button');
-				button.className = 'pattern-btn';
+				button.className = 'pattern-btn w-80px h-80px rounded-10 fs-30px w-sm-60px h-sm-60px fs-sm-20px d-flex align-items-center justify-content-center';
 				button.textContent = patterns[pattern];
 				button.dataset.pattern = pattern;
 				button.addEventListener('click', function () {
@@ -567,8 +453,8 @@
 			const mmContent = document.getElementById('mm-content');
 
 			// 隐藏密码输入区域，显示内容区域
-			passwordSection.style.display = 'none';
-			contentSection.style.display = 'block';
+			passwordSection.classList.add('d-none');
+			contentSection.classList.remove('d-none');
 
 			// 解析JSON并显示
 			try {
