--- a/index/More.html
+++ b/index/More.html
@@ -12,10 +12,8 @@
 
 <body>
 	<div class="z-3 d-flex flex-row position-fixed">
-		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3"
-			style="width: 100px;"><strong>返回</strong></button>
-		<button onclick="window.location.href = 'DD.html'" type="button" class="btn btn-info shadow mt-3"
-			style="width: 100px;"><strong>DD</strong></button>
+		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3 w-100px"><strong>返回</strong></button>
+		<button onclick="window.location.href = 'DD.html'" type="button" class="btn btn-info shadow mt-3 w-100px"><strong>DD</strong></button>
 		<form class="more-tag d-flex mx-3" role="search">
 			<input id="txt" class="form-control shadow me-2" type="search" placeholder="Search" aria-label="Search"
 				onkeypress="handleKeyPress(event)">
@@ -23,7 +21,7 @@
 		</form>
 		<button id="more-s" class="more-tag btn btn-info dropdown-toggle shadow" type="button">•••</button>
 		<button id="more-c" class="more-tag btn btn-info shadow mx-2 oh" type="button">清空</button>
-		<div id="more-mm" style="display: none;">
+		<div id="more-mm" class="d-none">
 			<button class="more-tag btn btn-info shadow oh" onclick="window.location.href = 'MM-secure.html'" type="button">M-M</button>
 			<button class="more-tag btn btn-info shadow oh" onclick="window.location.href = 'manager/nav-manager.html'" type="button">manager</button>
 		</div>
@@ -31,29 +29,29 @@
 	</div>
 	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
 		<div class="d-flex flex-column">
-			<div class="mt-3 mx-3" id="more-b" style="display: none;">
-				<button onclick="a(0)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="../img/luyou.png" loading="lazy"><h6 class="t1">1.</h6>
+			<div class="mt-3 mx-3 d-none" id="more-b">
+				<button onclick="a(0)" class="col my-2 p-1 text-center nav-ban-item" type="button"><img class="border rounded-circle nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">1.</h6>
 				</button>
-				<button onclick="a(1)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="../img/luyou.png" loading="lazy"><h6 class="t1">2.</h6>
+				<button onclick="a(1)" class="col my-2 p-1 text-center nav-ban-item" type="button"><img class="border rounded-circle nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">2.</h6>
 				</button>
-				<button onclick="a(2)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="../img/luyou.png" loading="lazy"><h6 class="t1">192168.</h6>
+				<button onclick="a(2)" class="col my-2 p-1 text-center nav-ban-item" type="button"><img class="border rounded-circle nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">192168.</h6>
 				</button>
-				<button onclick="a(3)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.baidu.com.png" loading="lazy"><h6 class="t1">Baidu</h6>
+				<button onclick="a(3)" class="col my-2 p-1 text-center nav-ban-item" type="button"><img class="border rounded-circle nav-ban-icon" src="https://api.iowen.cn/favicon/www.baidu.com.png" loading="lazy"><h6 class="nav-ban-text">Baidu</h6>
 				</button>
-				<button onclick="a(4)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="t1">Bing</h6>
+				<button onclick="a(4)" class="col my-2 p-1 text-center nav-ban-item" type="button"><img class="border rounded-circle nav-ban-icon" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="nav-ban-text">Bing</h6>
 				</button>
-				<button onclick="a(5)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="t1">Google.hk</h6>
+				<button onclick="a(5)" class="col my-2 p-1 text-center nav-ban-item" type="button"><img class="border rounded-circle nav-ban-icon" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="nav-ban-text">Google.hk</h6>
 				</button>
-				<button onclick="a(6)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.Yandex.com.png" loading="lazy"><h6 class="t1">Yandex</h6>
+				<button onclick="a(6)" class="col my-2 p-1 text-center nav-ban-item" type="button"><img class="border rounded-circle nav-ban-icon" src="https://api.iowen.cn/favicon/www.Yandex.com.png" loading="lazy"><h6 class="nav-ban-text">Yandex</h6>
 				</button>
-				<button onclick="a(7)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="t1">BiliBili</h6>
+				<button onclick="a(7)" class="col my-2 p-1 text-center nav-ban-item" type="button"><img class="border rounded-circle nav-ban-icon" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="nav-ban-text">BiliBili</h6>
 				</button>
-				<button onclick="a(8)" class="col my-2 p-1 text-center text-black-50 rounded-3 kuaijie-a-1" type="button"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.kuaidi100.com.png" loading="lazy"><h6 class="t1">快递100</h6>
+				<button onclick="a(8)" class="col my-2 p-1 text-center nav-ban-item" type="button"><img class="border rounded-circle nav-ban-icon" src="https://api.iowen.cn/favicon/www.kuaidi100.com.png" loading="lazy"><h6 class="nav-ban-text">快递100</h6>
 				</button>
 			</div>
 		</div>
 		<div class="d-flex flex-column" id="nav-content-container"></div>
-		<div class="mt-3 mx-3" id="aav" style="display: none;">
+		<div class="mt-3 mx-3 d-none" id="aav">
 			<div class="alert alert-secondary shadow" role="alert">小日本ポートエロ</div>
 			<div id="ar21" class="d-flex flex-wrap p-2"></div>
 		</div>
@@ -105,9 +103,9 @@
 	                ${tab.items.map(item => {
 					const iconUrl = item.icon || `https://api.afmax.cn/so/ico/index.php?r=${encodeURIComponent(item.url)}`;
 					return `
-	                        <a href="${item.url}" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1">
-	                            <img class="border rounded-circle w" src="${iconUrl}" loading="lazy" onerror="this.src='../img/index.png'">
-	                            <h6 class="t1">${item.name}</h6>
+	                        <a href="${item.url}" rel="nofollow" target="_blank" class="my-2 p-1 text-center nav-ban-item">
+	                            <img class="border rounded-circle nav-ban-icon" src="${iconUrl}" loading="lazy" onerror="this.src='../img/index.png'">
+	                            <h6 class="nav-ban-text">${item.name}</h6>
 	                        </a>
 	                    `;
 				}).join('')}
@@ -137,9 +135,9 @@
 			specialContainer.innerHTML = specialSites.map(site => {
 				const iconUrl = site.icon || `https://api.afmax.cn/so/ico/index.php?r=${encodeURIComponent(site.url)}`;
 				return `
-	            <a href="${site.url}" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1">
-	                <img class="border rounded-circle w" src="${iconUrl}" loading="lazy" onerror="this.src='../img/index.png'">
-	                <h6 class="t1">${site.name}</h6>
+	            <a href="${site.url}" rel="nofollow" target="_blank" class="my-2 p-1 text-center nav-ban-item">
+	                <img class="border rounded-circle nav-ban-icon" src="${iconUrl}" loading="lazy" onerror="this.src='../img/index.png'">
+	                <h6 class="nav-ban-text">${site.name}</h6>
 	            </a>
 	        `;
 			}).join('');
@@ -183,11 +181,11 @@
 		};
 
 		oMoreS.onclick = function () {
-			if (oMoreC.style.display == "none") {
-				oMoreC.style.display = "block";
+			if (oMoreC.classList.contains("d-none")) {
+				oMoreC.classList.remove("d-none");
 				window.scrollTo(0, 0);
 			} else {
-				oMoreC.style.display = "none";
+				oMoreC.classList.add("d-none");
 			};
 		};
 
@@ -212,7 +210,7 @@
 				var aav = document.getElementById("aav");
 				if (oValue === "001") {
 					console.log("welcom to ポートエロ");
-					aav.style.display = "block";
+					aav.classList.remove("d-none");
 					window.scrollTo(0, document.documentElement.scrollHeight);
 					oTxt.value = "";
 				} else if (oValue === "002") {
@@ -258,7 +256,7 @@
 		var oMoreMM = document.getElementById("more-mm");
 
 		if (localMM == "xiaolan") {
-			oMoreMM.style.display = "block";
+			oMoreMM.classList.remove("d-none");
 		};
 	</script>
 	<script>
@@ -272,7 +270,7 @@
 	</script>
 	<script>mots()</script>
 
-	<div style="display: none;">111</div>
+	<div class="d-none">111</div>
 </body>
 
 </html>
