--- a/index/test-MM-secure.html
+++ b/index/test-MM-secure.html
@@ -6,19 +6,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan - 测试 MM-secure.html</title>
-	<link rel="Shortcut icon" href="../favicon.ico" loading="lazy">
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<!-- 模块化 Header 组件 -->
+	<script src="../js/components/header-component.js"></script>
 	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 </head>
 
 <body>
-	<div class="z-3 d-flex flex-row position-fixed">
-		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
-		<button onclick="window.location.href = 'More.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>More</strong></button>
+	<div class="z-3 d-flex flex-row position-fixed top-0 start-0 p-3">
+		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow me-3 w-100px"><strong>返回</strong></button>
+		<button onclick="window.location.href = 'More.html'" type="button" class="btn btn-info shadow w-100px"><strong>More</strong></button>
 	</div>
 
-	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
+	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-5 container">
 		<div class="d-flex flex-column">
 			<div class="mt-3 mx-3">
 				<div class="alert alert-success shadow" role="alert">
@@ -52,34 +51,27 @@
 		</div>
 
 		<div class="fixed-bottom mx-1">
-			<div class=" container-fluid">
-				<div class="float-end">
-					<span class="badge text-black-50">
-						<a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • 
-						<a id="uptime1" href="Develop.html">加载中...</a>
-					</span>
+			<div class="container-fluid">
+				<div class="d-flex justify-content-end align-items-center gap-2">
+					<span class="badge text-black-50"><a
+							href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow"
+							target="_blank">Dev</a> • <a id="uptime1" href="Develop.html">加载中...</a></span>
 					<span id="state1" class="badge text-bg-success">加载中...</span>
-					<a><div class="spinner-grow spinner-grow-sm text-info" role="status"></div></a>
+					<div class="spinner-grow spinner-grow-sm text-info" role="status"></div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<!-- 动态背景 -->
-	<div class="z-1">
-		<div class="z-4">
-			<div id="jsi-flying-fish-container" class="w-100"></div>
-			<script src="../js/fish.js"></script>
-		</div>
-		<canvas class="background"></canvas>
-	</div>
-	<script src="../js/particles.min.js"></script>
+	<!-- 模块化 Background 组件 -->
+	<script src="../js/components/background-component.js"></script>
 	<script>
 		$('img').on("error", function () {
 			$(this).attr('src', '../img/index.png');
 		});
 	</script>
 	<script src="../js/foot.js"></script>
+	<script src="../js/dark-mode.js"></script>
 
 	<script>
 		// 加载版本信息
