--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<script src="js/components/header-component.js"></script>
 	
 	<!-- 异步加载JS -->
-	<script src="js/jquery-3.5.1.min.js" defer></script>
+	<script src="js/jquery-3.5.1.min.js"></script>
+	<script src="js/search_ajx.js"></script> <!-- 提前加载搜索逻辑 -->
 	<script src="performance-config.js" defer></script>
 </head>
 
-<body class="overflow-y-hidden">
-	<!-- 管理功能已移除 -->
-	<div class="z-2 d-flex flex-column mx-auto w-100p h-100p">
-		<div class="d-flex flex-column justify-content-end h-40p">
+<body class="main-content">
+	<div class="content-wrapper d-flex flex-column mx-auto">
+		<div class="d-flex flex-column justify-content-end" style="height: 40vh;">
 			<div class="mx-auto shadow mt-3 rounded-3"><img id="indexing" width="250" src="img/login.png" class="p-1">
 			</div>
 			<div class="mx-auto mt-5 pt-5">
@@ -24,7 +24,7 @@
 				<script src="js/components/search-component.js"></script>
 			</div>
 		</div>
-		<div class="d-flex flex-column h-60p">
+		<div class="d-flex flex-column" style="flex: 1;">
 			<nav class="p-2 mx-auto mt-5 pt-5">
 				<div class="nav nav-tabs shadow rounded-2 justify-content-center" id="nav-tabs-container">
 					<!-- More链接将由JavaScript动态添加 -->
@@ -120,7 +120,7 @@
 			row.className = 'row row-cols-4 g-2 p-2'; // 使用Bootstrap Gutter
 			
 			tab.items.forEach(item => {
-				const iconUrl = item.icon || `https://api.afmax.cn/so/ico/index.php?r=${encodeURIComponent(item.url)}`;
+				const iconUrl = item.url ? `https://api.iowen.cn/favicon/${new URL(item.url).hostname}.png` : 'img/index.png';
 				const col = document.createElement('div');
 				col.className = 'col';
 				col.innerHTML = `
@@ -172,8 +172,16 @@
 		function handleKeyPress(event) {
 			if (event.keyCode === 13) {
 				event.preventDefault();
-				const btn = document.querySelector('.search-icon');
-				if (btn) btn.click();
+				const form = document.querySelector('#search-engine-container form');
+				if (form) {
+                    if (typeof submitFn === 'function') {
+                        submitFn(form, event);
+                    } else {
+                        // Fallback
+                        const btn = document.querySelector('.search-icon');
+                        if (btn) btn.click();
+                    }
+                }
 				return false;
 			}
 		}
