--- a/index/More.html
+++ b/index/More.html
@@ -8,12 +8,12 @@
 	<script src="../js/components/header-component.js"></script>
 	
 	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
+	<script type="text/javascript" src="../js/search_ajx.js"></script>
 </head>
 
-<body>
-	<!-- 顶部导航栏 - 黏顶且高度统一 -->
+<body class="main-content">
 	<header class="sticky-header">
-		<div class="container-fluid header-nav-container">
+		<div class="container-fluid header-nav-container px-4">
 			<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow fw-bold">返回</button>
 			<button onclick="window.location.href = 'DD.html'" type="button" class="btn btn-info shadow fw-bold">DD</button>
 			
@@ -34,25 +34,25 @@
 		</div>
 	</header>
 
-	<div class="z-2 d-flex flex-column mx-auto">
-		<div class="container mt-3">
-			<div id="more-b" class="row row-cols-4 g-2 d-none mb-4">
-				<div class="col"><a href="http://192.168.1.1" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">1.</h6></a></div>
-				<div class="col"><a href="http://192.168.2.1" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">2.</h6></a></div>
-				<div class="col"><a href="http://192.168.1.1" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">192168.</h6></a></div>
-				<div class="col"><a href="https://www.baidu.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.baidu.com.png" loading="lazy"><h6 class="nav-ban-text">Baidu</h6></a></div>
-				<div class="col"><a href="https://www.bing.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="nav-ban-text">Bing</h6></a></div>
-				<div class="col"><a href="https://www.google.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="nav-ban-text">Google.hk</h6></a></div>
-				<div class="col"><a href="https://www.yandex.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.Yandex.com.png" loading="lazy"><h6 class="nav-ban-text">Yandex</h6></a></div>
-				<div class="col"><a href="https://www.bilibili.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="nav-ban-text">BiliBili</h6></a></div>
-				<div class="col"><a href="https://www.kuaidi100.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.kuaidi100.com.png" loading="lazy"><h6 class="nav-ban-text">快递100</h6></a></div>
+	<div class="content-wrapper">
+		<div class="container-fluid mt-3 px-4">
+			<div id="more-b" class="more-grid d-none mb-4">
+				<div class="more-card"><a href="http://192.168.1.1" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">1.</h6></a></div>
+				<div class="more-card"><a href="http://192.168.2.1" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">2.</h6></a></div>
+				<div class="more-card"><a href="http://192.168.1.1" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="../img/luyou.png" loading="lazy"><h6 class="nav-ban-text">192168.</h6></a></div>
+				<div class="more-card"><a href="https://www.baidu.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.baidu.com.png" loading="lazy"><h6 class="nav-ban-text">Baidu</h6></a></div>
+				<div class="more-card"><a href="https://www.bing.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="nav-ban-text">Bing</h6></a></div>
+				<div class="more-card"><a href="https://www.google.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="nav-ban-text">Google.hk</h6></a></div>
+				<div class="more-card"><a href="https://www.yandex.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.Yandex.com.png" loading="lazy"><h6 class="nav-ban-text">Yandex</h6></a></div>
+				<div class="more-card"><a href="https://www.bilibili.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="nav-ban-text">BiliBili</h6></a></div>
+				<div class="more-card"><a href="https://www.kuaidi100.com" rel="nofollow" target="_blank" class="nav-ban-item"><img class="nav-ban-icon" src="https://api.iowen.cn/favicon/www.kuaidi100.com.png" loading="lazy"><h6 class="nav-ban-text">快递100</h6></a></div>
 			</div>
 			
 			<div id="nav-content-container"></div>
 			
 			<div class="mt-4 d-none" id="aav">
 				<div class="alert alert-secondary shadow" role="alert">小日本ポートエロ</div>
-				<div id="ar21" class="row row-cols-4 g-2 p-2"></div>
+				<div id="ar21" class="more-grid"></div>
 			</div>
 		</div>
 		<div class="fixed-bottom mx-1">
@@ -99,22 +99,22 @@
 				section.className = 'mb-4';
 				section.innerHTML = `
 					<div class="alert alert-secondary shadow mb-3" role="alert">${tab.name}</div>
-					<div id="ar${index + 1}" class="row row-cols-4 g-2 p-2">
+					<div id="ar${index + 1}" class="more-grid">
 					</div>
 				`;
 				navContentContainer.appendChild(section);
 
-				const row = section.querySelector(`#ar${index + 1}`);
+				const grid = section.querySelector(`#ar${index + 1}`);
 				tab.items.forEach(item => {
 					const col = document.createElement('div');
-					col.className = 'col';
+					col.className = 'more-card';
 					const iconUrl = item.url ? `https://api.iowen.cn/favicon/${new URL(item.url).hostname}.png` : '../img/index.png';
 					col.innerHTML = `
 						<a href="${item.url}" rel="nofollow" target="_blank" class="nav-ban-item">
 							<img class="nav-ban-icon" src="${iconUrl}" loading="lazy" onerror="this.src='../img/index.png'">
 							<h6 class="nav-ban-text">${item.name}</h6>
 						</a>`;
-					row.appendChild(col);
+					grid.appendChild(col);
 				});
 			});
 		}
@@ -137,9 +137,9 @@
 
 			// 渲染特殊栏目的网站
 			specialContainer.innerHTML = specialSites.map(site => {
-				const iconUrl = site.icon || `https://api.afmax.cn/so/ico/index.php?r=${encodeURIComponent(site.url)}`;
+				const iconUrl = site.icon || `https://api.iowen.cn/favicon/${new URL(site.url).hostname}.png`;
 				return `
-					<div class="col">
+					<div class="more-card">
 						<a href="${site.url}" rel="nofollow" target="_blank" class="nav-ban-item">
 							<img class="nav-ban-icon" src="${iconUrl}" loading="lazy" onerror="this.src='../img/index.png'">
 							<h6 class="nav-ban-text">${site.name}</h6>
@@ -155,10 +155,17 @@
 	<script src="../js/components/background-component.js"></script>
 	
 	<script>
+		function handleKeyPress(event) {
+			if (event.keyCode === 13) {
+				event.preventDefault();
+				document.getElementById('btn').click();
+				return false;
+			}
+		}
+		
 		$('img').on("error", function () {
 			$(this).attr('src', '../img/index.png');
 		});
-		
 	</script>
 	<script>
 		//more的头部搜索框调用
