--- a/index/More.html
+++ b/index/More.html
@@ -69,7 +69,7 @@
 	</div>
 	<script>
 		document.addEventListener('DOMContentLoaded', function () {
-			fetch('../js/nav-data.json')
+			fetch('../data/nav-data.json')
 				.then(response => response.json())
 				.then(data => {
 					renderNavigation(data['more']);
